Fixed a bug where text would overlap links

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ a:hover {
 	display: flex;
 	justify-content: space-between;
 	font-size: 24px;
+	margin-top: 12px;
 }
 
 #randomLang {
